@@ -1,5 +1,7 @@
 [Feature] Ertshell refactored. Implementing shell functionality has been simplified.
 
+[Feature] Ertshell. Added dumping of entries in block mount files.
+
 [1.10.0] -----------------------------------------------------------------
 
 [Feature] Set the the verbose flag from the environment variable ERT_VERBOSE.
